--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,14 @@ proof-scaffold = { path = "../proof-scaffold", editable = true }
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.mypy]
+python_version = "3.10"
+mypy_path = "src:../proof-scaffold/src"
+strict = true
+disallow_untyped_decorators = false
+
+[[tool.mypy.overrides]]
+module = ["skfd.*"]
+ignore_missing_imports = true
+follow_imports = "skip"
