refactor: enhance type annotations and improve binding functions in formula and hilbert_rules modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "proof-scaffold",
 ]
 
+[tool.uv.sources]
+proof-scaffold = { path = "../proof-scaffold", editable = true }
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
