--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,18 +15,22 @@ authors = [
 ]
 
 dependencies = [
-    "proof-scaffold",
+    "proof-scaffold==0.0.4",
 ]
 
-[tool.uv.sources]
-proof-scaffold = { path = "../proof-scaffold", editable = true }
+[dependency-groups]
+dev = [
+    "mypy>=1.8",
+    "pytest>=8",
+    "ruff>=0.6",
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [tool.mypy]
 python_version = "3.10"
-mypy_path = "src:../proof-scaffold/src"
+mypy_path = "src"
 strict = true
 disallow_untyped_decorators = false
 
@@ -34,3 +38,10 @@ disallow_untyped_decorators = false
 module = ["skfd.*"]
 ignore_missing_imports = true
 follow_imports = "skip"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
+[tool.ruff]
+line-length = 100
+target-version = "py310"
