--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,42 @@ build-backend = "setuptools.build_meta"
 name = "metamath-prelude"
 version = "0.0.1"
 description = "Prelude definitions for Metamath projects"
-readme = "README.md"
+readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 license = "GPL-2.0-or-later"
 
+keywords = ["metamath", "proof", "proof-scaffold"]
+
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Topic :: Software Development :: Build Tools",
+]
+
 authors = [
-  { name = "Mingli Yuan" }
+  { name = "Mingli Yuan", email = "mingli.yuan@gmail.com" }
+]
+
+maintainers = [
+  { name = "Mingli Yuan", email = "mingli.yuan@gmail.com" }
 ]
 
 dependencies = [
     "proof-scaffold==0.0.4",
 ]
+
+[project.urls]
+Homepage = "https://github.com/epistemic-frontier/metamath-prelude"
+Repository = "https://github.com/epistemic-frontier/metamath-prelude"
+Issues = "https://github.com/epistemic-frontier/metamath-prelude/issues"
 
 [dependency-groups]
 dev = [
